--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,6 @@ tracing-subscriber = "0.3"
 tracing = "0.1"
 include_dir = "0.7"
 serde = { version = "1.0.219", features = ["derive"] }
-zip = "2.5"
+zip = { version = "2.5", features = ["time"] }
 regex = "1.11"
 time = "0.3"
